--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #800000;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.App-body{
+  margin:auto;
+  margin-top:5%;
+  width:50%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
